Set up camera and statistics tracking
Basic stats for now: number of drives, and average score (the score isn't actually calcuated from anything - it's always 100 for now)

--- a/Eye-RIS/Interface/Base.lproj/TabRoot.storyboard
+++ b/Eye-RIS/Interface/Base.lproj/TabRoot.storyboard
@@ -11,7 +11,6 @@
         <!--Tab Root View Controller-->
         <scene sceneID="fLr-db-LAp">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3f9-AL-5xx" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="UKZ-9h-8HU" customClass="TabRootViewController" customModule="Eye_RIS" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yoT-he-phv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -19,52 +18,53 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="rOd-1K-VcX" kind="relationship" relationship="viewControllers" id="s0X-Ks-gL6"/>
-                        <segue destination="KOt-gu-Qj2" kind="relationship" relationship="viewControllers" id="Gge-fO-ouw"/>
-                        <segue destination="q9L-OJ-2uK" kind="relationship" relationship="viewControllers" id="i05-fC-7ze"/>
-                        <segue destination="Fmm-sr-W7h" kind="relationship" relationship="viewControllers" id="1St-Pk-0NZ"/>
+                        <segue destination="rOd-1K-VcX" kind="relationship" relationship="viewControllers" id="QLD-wb-BuK"/>
+                        <segue destination="q9L-OJ-2uK" kind="relationship" relationship="viewControllers" id="har-gx-DiQ"/>
+                        <segue destination="Fmm-sr-W7h" kind="relationship" relationship="viewControllers" id="dUX-oX-pbK"/>
+                        <segue destination="KOt-gu-Qj2" kind="relationship" relationship="viewControllers" id="Gbv-YK-saf"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3f9-AL-5xx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-719" y="-80"/>
         </scene>
         <!--StatsTab-->
         <scene sceneID="EC4-Hs-4jd">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Eqa-l9-aKP" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="StatsTab" id="q9L-OJ-2uK" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Eiy-jg-kFA"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eqa-l9-aKP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-128" y="-67"/>
         </scene>
         <!--SettingsTab-->
         <scene sceneID="qpY-W6-gOa">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UDR-Xq-rrZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="SettingsTab" id="Fmm-sr-W7h" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="ZbA-Bz-1XO"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UDR-Xq-rrZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-129" y="-38"/>
         </scene>
         <!--StartDrivingTab-->
         <scene sceneID="CJP-ng-l6p">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kya-Ow-2CD" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="StartDrivingTab" id="rOd-1K-VcX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="ddw-z3-Ssz"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kya-Ow-2CD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-130" y="-126"/>
         </scene>
         <!--AboutTab-->
         <scene sceneID="k8C-J8-jnC">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hTk-KK-IT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="AboutTab" id="KOt-gu-Qj2" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="su5-Yh-utt"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hTk-KK-IT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-128" y="-95"/>
         </scene>
